python detection refactor

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ OPENAI_API_KEY=your_openai_api_key_here
 ASTRO_TAROT_MODEL=gpt-4o-mini
 ASTRO_TAROT_STOPS=
 
+# Python Configuration (optional, auto-detected if not set)
+# Only set this if auto-detection fails
+# PYTHON_PATH=/usr/bin/python3
+
 # Knowledge Base Paths (relative to project root)
 TAROT_KB_PATH=data/celestia_arcana_knowledge.json
 CONSTELLATION_KB_PATH=data/constellation_knowledge.json
