--- a/render.yaml
+++ b/render.yaml
@@ -17,7 +17,10 @@ services:
       # Install JS dependencies with Bun
       bun install --frozen-lockfile
       # Optional: install Python deps if scripts rely on them
-      if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      if [ -f requirements.txt ]; then
+        python3 -m pip install --upgrade pip
+        python3 -m pip install --target ./python_packages -r requirements.txt
+      fi
       # Build SvelteKit application
       bun run build
 
@@ -40,6 +43,8 @@ services:
         value: gpt-4o-mini
       - key: ENABLE_RESPONSE_CACHE
         value: true
+      - key: PYTHONPATH
+        value: /app/python_packages
 
     # Auto-deploy on Git push
     autoDeploy: true
